--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "jwt-decode": "^3.1.2",
     "mysql2": "^2.3.3",
     "nest-access-control": "^2.0.2",
     "passport": "^0.5.0",
